--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Book App</string>
+
+    <string name="new_user_signup">New User? SignUp</string>
+
+    <string name="back_button">Back</string>
+
 </resources>
